<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kawa.em.kawa.ui.Fiche.FicheActivity">

    <include layout="@layout/action_bar"/>

    <LinearLayout
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/nomCafe"
            android:text="@string/text_view_nom_du_cafe"
            android:layout_marginBottom="10dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>


        <TextView
            android:id="@+id/Adresse"
            android:text="@string/text_view_adresse"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <TextView
            android:id="@+id/codePostal"
            android:text="@string/text_view_code_postal"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/PrixComptoire"
            android:text="@string/text_view_prix_comptoire"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <TextView
            android:id="@+id/PrixSalle"
            android:text="@string/text_view_prix_salle"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <TextView
            android:id="@+id/PrixTerasse"
            android:text="@string/text_view_prix_terasse"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray"/>

        <Button
            android:background="#39b54a"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:text="@string/button_favoris"
            android:textColor="#FFFFFF"/>

        <Button
            android:background="@color/colorAccent"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/button_partager"
            android:textColor="#FFFFFF"/>

    </LinearLayout>

</LinearLayout>
